tests/baselines/reference/declarationEmitDefaultExport1.errors.txt
tests/cases/compiler/declarationEmitDefaultExport1.ts(1,22): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/declarationEmitDefaultExport1.ts (1 errors) ====
    export default class C {
                         ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }